fix: bulk milestone updates respone
- return all the milestones instead of object with "created", "updated" and "deleted" milestones
